# aimax-kit

./: ATTRIBUTION.md  INSTALL.md  README.md  pyproject.toml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh
src/specify_cli/: __init__.py
templates/: adr-template.md  atores-casos-uso-template.md  backlog-bdd-template.feature  glossario-template.md  visao-escopo-template.md
