[project]
name = "aimax-kit"
version = "0.1.0"
description = "IA MAX Kit - AI-Driven Multi-Agent Development Framework. Forked from GitHub Spec Kit with enhanced multi-agent capabilities, RPG, observability, and TEVV."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
specify = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]
